superset2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset
spec:
  selector:
    app: superset
  ports:
  - name: http
    port: 80
    targetPort: 8088
  type: LoadBalancer # or ClusterIP if you are using an ingress controller
